--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,3 +1,52 @@
-<p>
-  category-list works!
-</p>
+<nav class="mb-5">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+    <li class="breadcrumb-item active">Categorias</li>
+  </ol>
+</nav>
+
+<div class="row mb-5">
+  <div class="col-md"><h1 class="h2 border-left pl-2">Categorias</h1></div>
+  <div class="col-md">
+    <a routerLink="new" class="btn btn-success float-right"> Nova categoria </a>
+  </div>
+</div>
+
+<table class="table table-hover">
+  <thead>
+    <tr class="bg-primary text-light">
+      <th>Categoria</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>
+        <strong>Lazer</strong> <br />
+        <small>Cinema, parque, praia</small>
+      </td>
+      <td>
+        <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2"
+          >Editar</a
+        >
+        <button (click)="alert('excluir')" class="btn btn-danger btn-sm">
+          Excluir
+        </button>
+      </td>
+    </tr>
+    <tr>
+        <td>
+          <strong>Contas</strong> <br />
+          <small>Luz, Agua, Internet</small>
+        </td>
+        <td>
+          <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2"
+            >Editar</a
+          >
+          <button (click)="alert('excluir')" class="btn btn-danger btn-sm">
+            Excluir
+          </button>
+        </td>
+      </tr>
+  </tbody>
+</table>
