--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -20,30 +20,16 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
+    <tr *ngFor="let category of categories">
       <td>
-        <strong>Lazer</strong> <br />
-        <small>Cinema, parque, praia</small>
+        <strong>{{category.name}}</strong> <br />
+        <small>{{category.description}}</small>
       </td>
-      <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2"
+      <td >
+        <a [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm mr-2"
           >Editar</a
         >
-        <button (click)="alert('excluir')" class="btn btn-danger btn-sm">
-          Excluir
-        </button>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <strong>Contas</strong> <br />
-        <small>Luz, Agua, Internet</small>
-      </td>
-      <td>
-        <a [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2"
-          >Editar</a
-        >
-        <button (click)="alert('excluir')" class="btn btn-danger btn-sm">
+        <button (click)="deleteCategory(category)" class="btn btn-danger btn-sm">
           Excluir
         </button>
       </td>
