adicionado tratamento erro no servidor

--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -53,7 +53,14 @@
       </div>
     </div>
   </div>
-
+  <div *ngIf="serverErrorMessages" class="alert alert-danger mt-4">
+    <strong>Erro no servidor: </strong>
+    <ul>
+      <li *ngFor="let error of serverErrorMessages">
+        {{error}}
+      </li>
+    </ul>
+  </div>
   <button
     type="submit"
     [disabled]="submittingForm || categoryForm.invalid"
