--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,3 +1,212 @@
-<p>
-  entry-form works!
-</p>
+<nav class="mb-5">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+    <li class="breadcrumb-item"><a routerLink="/entries">Lançamentos </a></li>
+    <li class="breadcrumb-item active">{{ pageTitle }}</li>
+  </ol>
+</nav>
+
+<div class="row mb-5">
+  <div class="col-md-9">
+    <h1 class="h2 border-left pl-2">{{ pageTitle }}</h1>
+  </div>
+  <div class="col-md-3">
+    <a routerLink="/entries" class="btn btn-light float-right"> Voltar </a>
+  </div>
+</div>
+
+<form [formGroup]="entryForm" (submit)="submitForm()">
+  <div class="card">
+    <div class="card-header">Informações sobre a categoria</div>
+
+    <div class="card-body">
+      <div class="form-row">
+        <!-- TYPE -->
+        <div class="form-group col-sm-4 col-md-3">
+          <label for="name">Tipo</label>
+          <select
+            name="type"
+            id="type"
+            formControlName="type"
+            class="form-control"
+          >
+            <option *ngFor="let option of TypeOptions" [value]="option.value">{{
+              option.text
+            }}</option>
+          </select>
+          <div
+            class="text-danger"
+            *ngIf="
+              entryForm.get('type').invalid && entryForm.get('type').touched
+            "
+          >
+            <div *ngIf="entryForm.get('type').errors.required">
+              dados obrigatórios
+            </div>
+            <div *ngIf="entryForm.get('type').errors.minLength">
+              deve ter no mínimo 2 caracteres
+            </div>
+          </div>
+        </div>
+        <!-- Lançamento -->
+        <div class="form-group col-md-4">
+          <label for="name">Lançamento</label>
+          <input
+            type="text"
+            formControlName="name"
+            class="form-control"
+            id="name"
+          />
+          <div
+            class="text-danger"
+            *ngIf="
+              entryForm.get('name').invalid && entryForm.get('name').touched
+            "
+          >
+            <div *ngIf="entryForm.get('name').errors.required">
+              dados obrigatórios
+            </div>
+            <div *ngIf="entryForm.get('name').errors.minLength">
+              deve ter no mínimo 2 caracteres
+            </div>
+          </div>
+        </div>
+
+        <!-- Valor -->
+        <div class="form-group col-md-3">
+          <label for="name">Valor</label>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <div class="input-group-text">R$</div>
+            </div>
+            <input
+              type="text"
+              formControlName="amount"
+              class="form-control text-right"
+              [imask]="imaskConfig"
+              id="amount"
+            />
+          </div>
+
+          <div
+            class="text-danger"
+            *ngIf="
+              entryForm.get('amount').invalid && entryForm.get('amount').touched
+            "
+          >
+            <div *ngIf="entryForm.get('amount').errors.required">
+              dados obrigatórios
+            </div>
+          </div>
+        </div>
+
+        <!-- Data -->
+        <div class="form-group col-md-2">
+          <label for="name">Data</label>
+          <p-calendar
+            id="date"
+            formControlName="date"
+            inputStyleClass="form-control"
+            dateType="string"
+            dateFormat="dd/mm/yy"
+            [locale]="ptBR"
+            [showButtonBar]="true"
+          ></p-calendar>
+          <div
+            class="text-danger"
+            *ngIf="
+              entryForm.get('date').invalid && entryForm.get('date').touched
+            "
+          >
+            <div *ngIf="entryForm.get('date').errors.required">
+              dados obrigatórios
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <!-- Pago -->
+        <div class="form-group col-md-3">
+          <label for="name">Pago</label> <br />
+          <div class="btn-group">
+            <label
+              (click)="entryForm.get('paid').setValue(true)"
+              [class.active]="entryForm.get('paid').value == true"
+              class="btn btn-outline-info"
+              >Pago</label
+            >
+            <label
+              (click)="entryForm.get('paid').setValue(false)"
+              [class.active]="entryForm.get('paid').value == false"
+              class="btn btn-outline-info"
+              >Pendente</label
+            >
+          </div>
+          <div
+            class="text-danger"
+            *ngIf="
+              entryForm.get('paid').invalid && entryForm.get('paid').touched
+            "
+          >
+            <div *ngIf="entryForm.get('paid').errors.required">
+              dados obrigatórios
+            </div>
+          </div>
+        </div>
+        <!-- Categoria -->
+        <div class="form-group col-md-3">
+          <label for="categoryId">Categoria</label>
+          <select
+            name="categoryId"
+            id="categoryId"
+            formControlName="categoryId"
+            class="form-control"
+          >
+            <option *ngFor="let category of categories" [value]="category.id">{{
+              category.name
+            }}</option>
+          </select>
+          <div
+            class="text-danger"
+            *ngIf="
+              entryForm.get('categoryId').invalid &&
+              entryForm.get('categoryId').touched
+            "
+          >
+            <div *ngIf="entryForm.get('categoryId').errors.required">
+              dados obrigatórios
+            </div>
+          </div>
+        </div>
+        <!-- DESCRIPTION -->
+        <div class="form-group col-md-6">
+          <label for="description">Descrição</label>
+          <input
+            type="text"
+            class="form-control"
+            formControlName="description"
+            id="description"
+          />
+        </div>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="serverErrorMessages" class="alert alert-danger mt-4">
+    <strong>Erro no servidor: </strong>
+    <ul>
+      <li *ngFor="let error of serverErrorMessages">{{ error }}</li>
+    </ul>
+  </div>
+  <button
+    type="submit"
+    [disabled]="submittingForm || entryForm.invalid"
+    class="btn  btn-primary btn-lg float-right mt-3"
+  >
+    Salvar
+  </button>
+</form>
+
+<pre>
+  {{ entryForm.value | json }}
+</pre>
