--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -20,16 +20,16 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let category of categories">
+    <tr *ngFor="let item of resource">
       <td>
-        <strong>{{category.name}}</strong> <br />
-        <small>{{category.description}}</small>
+        <strong>{{item.name}}</strong> <br />
+        <small>{{item.description}}</small>
       </td>
       <td >
-        <a [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm mr-2"
+        <a [routerLink]="[item.id, 'edit']" class="btn btn-outline-info btn-sm mr-2"
           >Editar</a
         >
-        <button (click)="deleteCategory(category)" class="btn btn-danger btn-sm">
+        <button (click)="deleteResource(item)" class="btn btn-danger btn-sm">
           Excluir
         </button>
       </td>
