--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -107,7 +107,7 @@
             id="date"
             formControlName="date"
             inputStyleClass="form-control"
-            dateType="string"
+            dataType="string"
             dateFormat="dd/mm/yy"
             [locale]="ptBR"
             [showButtonBar]="true"
